[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.14"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.67"
base64 = "0.21.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
